may-2026/devops/alchemyst-devops/terraform/security.tf
# -----------------------------
# API Security Group
# -----------------------------

resource "aws_security_group" "api_sg" {

  name   = "api-security-group"
  vpc_id = aws_vpc.main.id

  # SSH Access

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # API Access

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound Traffic

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -----------------------------
# Worker Security Group
# -----------------------------

resource "aws_security_group" "worker_sg" {

  name   = "worker-security-group"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port       = 9000
    to_port         = 9000
    protocol        = "tcp"
    security_groups = [aws_security_group.api_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
